Fix tutorial alignment and label OK button

--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -160,6 +160,10 @@ a {
   }
 }
 
+.btn-light {
+  background: $icon-bg;
+}
+
 #container {
   position: static;
 }
