--- a/src/css/_client.scss
+++ b/src/css/_client.scss
@@ -140,6 +140,7 @@ table {
 label {
   display: inline-block;
   vertical-align: middle;
+  font-size: large;
 }
 
 button {
