--- a/src/css/_info.scss
+++ b/src/css/_info.scss
@@ -1,7 +1,8 @@
 .info {
+  display: table;
   text-align: left;
   font-size: 1rem;
-  margin: 20px;
+  margin: 0 auto;
 
   p,
   ul {
